--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80b678">  <td>20/06/15 19:05:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@988458918</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/06/15 19:05:51</td>   <td>18440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0005_FlightbookingjourneywithBuyYourOwnPackage(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">TC_0005_FlightbookingjourneywithBuyYourOwnPackage</td> 
-  <td>main@988458918</td>   <td></td> </tr>
-<tr bgcolor="80b678">  <td>20/06/15 19:09:43</td>   <td>250409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7e2d773b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@988458918</td>   <td></td> </tr>
+<tr bgcolor="eb8acf">  <td>20/06/17 09:05:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
+<tr bgcolor="fe7d71">  <td>20/06/17 09:06:37</td>   <td>57877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">TC_0018_bookingDetailswithPremiumEcomomy</td> 
+  <td>main@660017404</td>   <td></td> </tr>
+<tr bgcolor="eb8acf">  <td>20/06/17 09:09:57</td>   <td>257294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
 </table>
